# hx_clog

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  README.zh-CN.md  SECURITY.md
.github/workflows/: ci.yml
cmake/: hx_clog.pc.in  hx_clogConfig.cmake.in
docs/: api.md  ci.md  crash.md  design.md
docs/audit/: 2026-06-19-hx-clog-v1.2.0-completeness-audit.md  AUDIT_REPORT.md
docs/zh-CN/: api.md  ci.md  crash.md  design.md
examples/: CMakeLists.txt  c_async.c  c_basic.c  c_rotate.c  cpp11_basic.cpp
include/: hx_clog.h  hx_clog_cpp.hpp
src/: hx_clog_async.c  hx_clog_core.c  hx_clog_crash.c  hx_clog_file.c  hx_clog_file.h  hx_clog_format.c  hx_clog_internal.h  hx_clog_net.c  hx_clog_rotate.c  hx_clog_sink.c
tests/: CMakeLists.txt  test_async.c  test_audit_fixes.c  test_config_file.c  test_cpp11.cpp  test_crash.c  test_date_subdir.c  test_features.c  test_fork.c  test_format.c  test_largeline.c  test_logger_registry.c  test_macros.c  test_net.c  test_rotate.c  test_rotate_time.c  test_utf8path.c
